# GF-testing

./: .gitignore  .gitmodules  GF-testing.cabal  MiniLang.hs  README.md  out  out2  out4  outnew  outnow  testBasque.sh  testLang.sh
app/: Main.hs
data/: GF-testing-profiling.prof  Makefile  MiniLang.pgf  bugs-TODO.md  bugs-TODO.txt  dutch-category-changes.md  dutch-changes  dutch-prep-np-contraction.md  dutch_words_maybe_correct  dutch_words_wrong  forbidden-words.txt  mkConcrete.sh
data/grammars/: Foods.gf  FoodsSpa.gf  FoodsSpaBuen.gf  FoodsSpaBueno.gf  NounPhrases.gf  NounPhrasesDut.gf  NounPhrasesDutRG.gf  NounPhrasesEst.gf  NounPhrasesEus.gf  NounPhrasesEusBind.gf  TestLang.gf  TestLangDut.gf  TestLangEng.gf  TestLangEst.gf  TestLangEus.gf  TestLangIce.gf  TestLexicon.gf  TestLexiconEus.gf  TestLexiconI.gf
doc/: ICST-summary.tex  NounPhrasesDutRG_*.org  NounPhrasesDut_*.org  README.md  bugs-DONE.md  bugs-TODO.md  dutch-category-changes.md  dutch-prep-np-contraction.md  pruning.md  time.md
doc/ICST2018/: ICST-summary.tex
doc/coling2018/: bibliography.bib  coling2018.out  coling2018.tex  nlcs.tex  stackengine.tex  syntaxhilight.tex
doc/nlcs/: nlcs.tex
src/: EqRel.hs  FMap.hs  FMapQuickCheck.hs  FTree.hs  GrammarC.hs  Graph.hs  Lib.hs  Mu.hs  MuOld.hs  MuQuickCheck.hs  test.p
