name:                GF-testing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/inariksit/GF-testing#readme
license-file:        LICENSE
author:              Inari Listenmaa
maintainer:          inari.listenmaa@gmail.com
copyright:           2017 Inari Listenmaa
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:    *.pgf, *.txt

data-dir:      data/

library
  hs-source-dirs:      src
  exposed-modules:     Lib, GrammarC, Mu, Graph, FMap, EqRel
  other-modules:       Paths_GF_testing
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pgf2
                     , mtl
  default-language:    Haskell2010

executable gftest
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , cmdargs
                     , containers
                     , GF-testing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/inariksit/GF-testing
